Resolved layout bug

--- a/src/Pages/ProductListPage/ProductListPage.module.scss
+++ b/src/Pages/ProductListPage/ProductListPage.module.scss
@@ -1,7 +1,7 @@
 @import "../../Common/variables.module.scss";
 
 .contentWrapper {
-  padding: 2rem 6rem;
+  padding: 7rem 6rem;
   background: $white;
   .titleLayout {
     background: $white;
